# marlinspike-dpi

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
benches/: throughput.rs
corpus/: ics-defense-manifest.yaml
src/: bronze.rs  corpus.rs  dedup.rs  engine.rs  ffi.rs  icmpeeker.rs  lib.rs  main.rs  registry.rs
src/bilgepump/: alerts.rs  config.rs  mod.rs  monitor.rs  state.rs
src/bilgepump/detectors/: arp.rs  dhcp.rs  identity.rs  mac.rs  mod.rs  stp.rs  vlan.rs
src/dissectors/: arp.rs  bacnet.rs  cdp.rs  dhcp.rs  dnp3.rs  dns.rs  ethercat.rs  ethernet_ip.rs  fins.rs  ftp.rs  hart_ip.rs  http.rs  icmp.rs  iec104.rs  iec61850.rs  lacp.rs  lldp.rs  mod.rs  modbus.rs  mqtt.rs  mrp.rs  mstp.rs  ntp.rs  opc_ua.rs  profinet.rs  prp.rs  pvst.rs  radius.rs  s7comm.rs  snmp.rs  ssh.rs  stp.rs  syslog.rs  tcp.rs  udp.rs  vtp.rs
src/stovetop/: config.rs  findings.rs  frame_inspector.rs  icmp.rs  integrity.rs  mod.rs  padding.rs
